examples/test/testpolicy14454.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14454
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key12: value26
      key32: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value2
          key21: value7
      podSelector:
        matchLabels:
          key15: value26
          key16: value17
          key4: value35
